(SIMP-6063) Update Changelog for 6.3.2 (#285)
(SIMP-6063) Update Changelog for 6.3.2
* Update 6.3.0_Changelog.rst
* Spelling/grammar fixes and changed gitlab.yml to gitlab_ci.yml
* Describe new bootstrap option in SIMP server initial config section

SIMP-6069 #close